# Core_Nexus-Hash-Heaven

./: API_DOCUMENTATION.md  Cargo.toml  README.md  ai.py  ai.py.bak  app.py  check_owner.py  contract.sol  curl.md  deploy-interface.html  deploy-simple.html  get_task_by_hash.py  hardhat.config.js  package-lock.json  package.json  requirements.txt  update_env.sh  update_wallet.py
artifacts/contracts/AIAgent.sol/: AIAgent.dbg.json  AIAgent.json
cache/: solidity-files-cache.json
results/: task_1_0031219a04.json  task_1_0d4b625baf.json  task_1_706735109c.json  task_1_7416374a3f.json  task_1_d1a4a2f074.json  task_1_e6e3382348.json  task_23_c9c4297b2d.json  task_index.json
results/agents/: crew_output_1234_20250420_101845.json  crew_output_1234_20250420_101846.json  crew_output_1234_20250420_102449.json  crew_output_1234_20250420_102451.json  crew_output_1_20250420_095806.json  crew_output_1_20250420_100617.json  crew_output_23_20250420_100054.json
scripts/: deploy-arbitrum.js  deploy-direct.js  deploy-simple.js  deploy-stylus.js  deploy.js  verify-address.js
static/css/: style.css
static/js/: main.js
templates/: agent_output_detail.html  agent_output_detail_tailwind.html  agent_output_structured.html  agent_outputs.html  agent_outputs_tailwind.html  ai_result_detail.html  ai_results.html  base.html  base_tailwind.html  blockchain_info.html  create_task.html  index.html  index.html.bak  index.html.fixed  index_tailwind.html  recent_tasks.html  task_detail.html
